Fix overflow problem

--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ html{
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
 }
 
 /*The Side Selection Screen*/
